--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.url=jdbc:h2:mem:baseDeDatos
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto = create
+server.port=8080
+spring.security.oauth2.client.registration.github.clientId=577de84b30f610c8c005
+spring.security.oauth2.client.registration.github.clientSecret=b38e8cd28721b7d7c379bf84439b81bc4371be26
